<resources>
    <string name="app_name">ToDoApp</string>
    <string name="filter_title">Filter the Todos</string>
    <string-array name="filter_options">
        <item>All</item>
        <item>Active</item>
        <item>Completed</item>
    </string-array>
    <string name="account_question_sign_up">Don\'t have an accout? \nSign up here:</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_in">Sign in</string>
    <string name="name">Name</string>
    <string name="secondname">SecondName</string>
    <string name="email">Email</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="already_signed_in_login">Already signed in? Login.</string>
    <string name="set_the_date">Set the Date</string>
</resources>
